# coin

./: .editorconfig  .gitignore  .gitmodules  AUTHORS  CREDITS  INSTALL  LICENSE  NEWS  README  README.md  amd-gpu-resources.rc  bignum.h  bitcoin-miner.rc  bitcoin-miner.vcxproj  bitcoin-miner.vcxproj.filters  coin-chains.xml  coin-msg.h  coin.sln  coineng.rc  coineng.vcxproj  coineng.vcxproj.filters  configure.ac  ext_messages.h  manufacturer.h  test.txt  u-config.h
cfg/vs/: mc.props  mc.targets  mc.xml
coin/coind/: coind.cpp  coind.vcxproj
coin/eng/: backend-dblite.cpp  backend-dblite.h  backend-sqlite.cpp  backend-sqlite.h  bitcoin.cpp  block.cpp  coin-chains.xml  coin-com.cpp  coin-com.idl  coin-model.cpp  coin-model.h  coin-protocol.cpp  coin-protocol.h  coindb.cpp  coineng.cpp  coineng.def  coineng.vcxproj.filters  coinrpc.cpp  crypter.cpp  crypter.h  devcoin.cpp  eng.h  file_config.h  generate.cpp  import-export-bdb.cpp  import-export.cpp  irc.cpp  irc.h  mempool.cpp  namecoin.cpp  param.h  proof-of-stake.cpp  proof-of-stake.h  resource.h  script.cpp  script.h  tx.cpp  wallet.cpp  wallet.h
coin/eng/currency/: bitcoin.cpp  devcoin.cpp  dogecoin.cpp  earthcoin.cpp  feathercoin.cpp  metiscoin.cpp  namecoin.cpp  namecoin.h  novacoin.cpp  ppcoin.cpp  primecoin.cpp  protoshares.cpp  solidcoin.cpp  terracoin.cpp
coin/inc/: prj_config.h
coin/miner/: bitcoin-gpu.cpp  bitcoin-sha256.h  bitcoin-sha256sse.h  bitcoin_sha256_x86x64.asm  bitset-op.asm  elf.h  file_config.h  miner-bitforce.cpp  miner-cal.cpp  miner-cuda.cpp  miner-opencl.cpp  miner.cpp  miner.h  phatk.cl  serial-device.cpp  xpt-message.cpp  xpt.cpp  xpt.h
coin/miner/hasher/: hasher-metis.cpp  hasher-sha3.cpp
coin/ui/: app.config  f_main.xaml.cs  f_options.xaml.cs  f_passphrase.xaml  f_passphrase.xaml.cs  f_send-money.xaml.cs  f_transactions.xaml
coin/ui/properties/: resources.designer.cs  settings.designer.cs
coin/util/: base58.cpp  block-template.cpp  block-template.h  metis.cpp  miner-interface.h  momentum.cpp  prime-util.cpp  prime-util.h  prj_config.h  rpc-wallet-client.cpp  sph-config.h  util.cpp  util.h  wallet-client.h
coind/: coind.rc  coind.vcxproj.filters
comp/: gpu-cuda.cpp  gpu-cuda.h  x86x64.inc
crypto/: blake.cpp  ecdsa.cpp  ecdsa.h  merkle-tree.cpp  ripemd.cpp  sha-3.cpp  sha512.cpp
crypto/x86x64/: sha256_x86x64.asm
db/: db-itf.h
db/dblite/: b-tree.cpp  b-tree.h  dblite-file-format.h  dblite.cpp  dblite.h  file_config.h  filet.cpp  filet.h  hash-table.cpp  hash-table.h  pager.cpp
el/: a.cmd  bignum.h  ext.h  extres.h  libext.h  xml.h
el/comp/: device-manager.cpp  device-manager.h  ext-opencl.cpp  ext-opencl.h  gpu-adl.cpp  gpu-adl.h  gpu-cal.cpp  gpu-cal.h  stdafx.cpp
el/crypto/: aes.cpp  bloom-filter.h  ecdsa.cpp  ecdsa.h  ext-openssl.cpp  ext-openssl.h  hash.h  salsa20.cpp  salsa20.h  scrypt.cpp  sha256.cpp
el/db/: bdb-reader.cpp  bdb-reader.h  ext-sqlite.cpp  ext-sqlite.h  sqlite-mmap.cpp
el/elwin/: dllmodul.cpp  static-main.cpp
el/inc/: default-defs.h  ext_config.h  inc_configs.h
el/inet/: async-text-client.cpp  async-text-client.h  detect-global-ip.cpp  detect-global-ip.h  irc-client.cpp  json-rpc.cpp  json-rpc.h  p2p-net.cpp  p2p-net.h  p2p-peers.cpp
el/libext/: afterstl.h  bignum.cpp  binary-reader-writer.cpp  binary-reader-writer.h  c-old.h  cpp-old.h  datetime.cpp  datetime.h  ext-app.cpp  ext-app.h  ext-base.cpp  ext-base.h  ext-blob.h  ext-core.cpp  ext-core.h  ext-cpp.h  ext-cpu.h  ext-encoding.cpp  ext-file.cpp  ext-fw.cpp  ext-fw.h  ext-handlers.cpp  ext-hash.h  ext-http.h  ext-ip-address.cpp  ext-json.cpp  ext-lru.h  ext-net.cpp  ext-net.h  ext-os-api.h  ext-os.cpp  ext-os.h  ext-posix-win.h  ext-posix.cpp  ext-posix.h  ext-protocols.h  ext-ptr.h  ext-regex.h  ext-safehandle.h  ext-str.h  (+24 more)
el/num/: mod.cpp  mod.h  num.cpp  num.h
el/stl/: decimal.cpp  dynamic_bitset  mutex  regex  regex.cpp  shared_mutex  thread
el/win/: setupdi.cpp  setupdi.h
el/xml/: xml-dom.cpp  xml-node-reader.cpp  xml.cpp
eng/: backend-sqlite.cpp  coin-com.idl  coin-model.cpp  coin-model.h  coin-protocol.cpp  coin-protocol.h  coineng.cpp  crypter.cpp  crypter.h  feathercoin.cpp  file_config.h  import-export-bdb.cpp  namecoin.h  novacoin.cpp  param.h  pool.cpp  ppcoin.cpp  proof-of-stake.h  script.cpp  script.h  terracoin.cpp  tx.cpp  wallet.cpp
foreign/mpir/: mpir.vcxproj  mpir.vcxproj.filters
foreign/openssl/: openssl.vcxproj  openssl.vcxproj.filters
inc/: extver.h  util.h
inet/: irc-client.h  json-rpc.h  p2p-net.h  p2p-peers.h
libext/: datetime.cpp  ext-base.cpp  ext-blob.cpp  ext-core.cpp  ext-core.h  ext-fw.h  ext-macro.h  ext-meta.h  ext-net.h  ext-posix.cpp  ext-posix.h  ext-protocols.cpp  ext-safehandle.h  ext-stream.h  ext-text.cpp  http.cpp  interlocked.h  libext.vcxproj.filters  varvalue.cpp
libext/win32/: ext-cmd.h  ext-com.h  ext-registry.cpp  win-thread.cpp
libext/x86x64/: memcpy_aligned_x86x64.asm
m/guicomp/: c_dial-pad.cs  console.cs  d_about.xaml  d_about.xaml.cs  d_text-info.xaml  f_about.cs  f_about.designer.cs  f_querystring.cs  f_textinfo.cs  file-document.cs  formsutil.cs
m/util/: lru.cs  util-formatters.cs  util.cs
m/win-util/: wave-out.cs  win-util.cs  win-util.csproj
m/win32/: kernel.cs  richedit.cs  win32.cs  winerror.cs  winuser.cs
miner/: bitcoin-common.h  bitcoin-miner.cpp  bitcoin-sha256-x86x64.cpp  bitcoin-sha256.h  bitcoin_sha256_x86x64.asm  dynclock.cpp  hash-common.lisp  miner-bitforce.cpp  miner-fpga-modminer.cpp  miner-opencl.cpp  miner.cpp  miner.def  miner.h  resource.h  serial-device.h  sha-2.lisp  stratum-client.cpp
p2p/net/: detect-global-ip.cpp  detect-global-ip.h  p2p-net.cpp  p2p-net.h  p2p-peers.cpp  p2p-peers.h
src/: vc-inc.h
src/include/: manufacturer.h  std_config.h  u-config.h
stl/: decimal  dynamic_bitset.cpp  ext-locale.h  mutex.cpp  shared_mutex.cpp  thread.cpp
ui/: app.cs  f_address-book.xaml  f_address-book.xaml.cs  f_address.xaml  f_main.xaml  f_options.xaml  f_send-money.xaml  f_transactions.xaml.cs
util/: coin-msg.mc
win/: nt.h
xml/: xml-reader.cpp  xml-writer.cpp
(+251 files in other folders)
